update btvn and finished